# framework.graphics.native-buffer

./: CMakeLists.txt  COPYING  native-buffer.pc.in  project.config
TC/: config
TC/testcase/: tslist  utc_native_buffer_create.c  utc_native_buffer_getter.c  utc_native_buffer_lock.c  utc_native_buffer_provider.c  utc_native_buffer_socket.c
doc/: native-buffer-doc.h
docs/: native-buffer-doc.h
example/: CMakeLists.txt  native-buffer-test  native-buffer-test-common.c  native-buffer-test-common.h  native-buffer-test.c
example/data/: YV12_512_512.yuv
include/: native-buffer.h
packaging/: native-buffer.spec
src/: CMakeLists.txt  native-buffer-private.h  native-buffer.c
