CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(PACKAGE_NAME "native-buffer")

ADD_SUBDIRECTORY(src)
IF (BUILD_TC)
ADD_SUBDIRECTORY(TC)
ENDIF(BUILD_TC)

# Configure PC file. CONFIGURE_FILE() is case-sensitive.
SET(PREFIX ${CMAKE_INSTALL_PREFIX})
SET(LIBDIR ${CMAKE_LIB_DIR})
SET(INCLUDEDIR ${CMAKE_INSTALL_PREFIX}/include/${PACKAGE_NAME})
SET(LIBS "-l${PACKAGE_NAME}")

CONFIGURE_FILE(${PACKAGE_NAME}.pc.in
    ${CMAKE_CURRENT_SOURCE_DIR}/${PACKAGE_NAME}.pc
    @ONLY )

INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/${PACKAGE_NAME}.pc DESTINATION lib/pkgconfig)

INSTALL(DIRECTORY include/ DESTINATION include)
