CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(native-buffer C)

SET(VERSION 0.1.0)

#ADD_SUBDIRECTORY(modules)

IF(USE_MALI)
ADD_DEFINITIONS(-DUSE_MALI)
ENDIF(USE_MALI)

SET(SRCS
	native-buffer.c
)

INCLUDE_DIRECTORIES(
	${CMAKE_SOURCE_DIR}
	${CMAKE_SOURCE_DIR}/include
	${CMAKE_CURRENT_SOURCE_DIR}
)

INCLUDE(FindPkgConfig)
pkg_check_modules(${PROJECT_NAME}_pkgs REQUIRED
	dlog
	libdrm
	libtbm
	x11
	xproto
	libdri2
	xfixes
)

FOREACH(flag ${${PROJECT_NAME}_pkgs_CFLAGS})
	SET(EXTRA_FLAGS "${EXTRA_FLAGS} ${flag}")
ENDFOREACH(flag)


ADD_LIBRARY(${PROJECT_NAME} SHARED ${SRCS})

SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES SOVERSION ${VERSION} )
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES COMPILE_FLAGS ${EXTRA_FLAGS})
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES INSTALL_RPATH ${CMAKE_INSTALL_PREFIX}/lib)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${${PROJECT_NAME}_pkgs_LDFLAGS} gcc_s gcc pthread)

INSTALL(TARGETS ${PROJECT_NAME} DESTINATION lib)

INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/native-buffer-private.h DESTINATION include)

